making some changes and adding the main body

--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
             <nav class="header__nav">
                 <div class="header__nav--left">
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navLogo">
+                        <div class="header__navItem header__navLogo u__caps u__bold">
                             <span class="logo">Y</span>
                         </div>
                     </a>
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navNew">
+                        <div class="header__navItem header__navNew u__caps u__bold">
                             New
                         </div>
                     </a>
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navComments">
+                        <div class="header__navItem header__navComments u__caps u__bold">
                             Comments
                         </div>
                     </a>
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navShow">
+                        <div class="header__navItem header__navShow u__caps u__bold">
                             Show
                         </div>
                     </a>
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navAsk">
+                        <div class="header__navItem header__navAsk u__caps u__bold">
                             Ask
                         </div>
                     </a>
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navJobs">
+                        <div class="header__navItem header__navJobs u__caps u__bold">
                             Jobs
                         </div>
                     </a>
                     <a href="#!" class="header__navLink--nolink">
-                        <div class="header__navItem header__navSubmit">
+                        <div class="header__navItem header__navSubmit u__caps u__bold">
                             Submit
                         </div>
                     </a>
@@ -68,12 +68,30 @@
             </nav>
         </header>
         <main class="main">
-            <article class="main__article">
-
-            </article>
-            <aside class="main__aside">
-
-            </aside>
+            <section class="main__section">
+                <article class="main__article">
+                    <section class="article__section">
+                        <ul class="article__ul">
+                            <li class="ul__item">
+                                Testing
+                            </li>
+                        </ul>
+                    </section>
+                </article>
+                <aside class="main__aside">
+                    <section class="aside__section">
+                        <span class="u__caps u__bold">Latest Jobs</span>
+                        <ul>
+                            <li>
+                                One here
+                            </li>
+                            <li>
+                                Another one
+                            </li>
+                        </ul>
+                    </section>
+                </aside>
+            </section>
         </main>
     </body>
 </html>
