making the links

--- a/index.html
+++ b/index.html
@@ -72,8 +72,15 @@
                 <article class="main__article">
                     <section class="article__section">
                         <ul class="article__ul">
-                            <li class="ul__item">
-                                Testing
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="www.google.com" class="li__link--nolink u__bold">Testing</a>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="www.google.com" class="li__link--nolink u__bold">Testing</a>
+                                </div>
                             </li>
                         </ul>
                     </section>
