added some jobs
Now to add more content, and the footer

--- a/index.html
+++ b/index.html
@@ -74,12 +74,16 @@
                         <ul class="article__ul">
                             <li class="article__li">
                                 <div class="li__contents">
-                                    <a href="www.google.com" class="li__link--nolink u__bold">Testing</a>
+                                    <a href="http://www.google.com" class="li__link--nolink u__bold">Testing</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">122 comments</span> &#9679; <span class="li__subcontents contents__time">2 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by pg</span>
                                 </div>
                             </li>
                             <li class="article__li">
                                 <div class="li__contents">
-                                    <a href="www.google.com" class="li__link--nolink u__bold">Testing</a>
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
                                 </div>
                             </li>
                         </ul>
@@ -87,13 +91,23 @@
                 </article>
                 <aside class="main__aside">
                     <section class="aside__section">
-                        <span class="u__caps u__bold">Latest Jobs</span>
-                        <ul>
-                            <li>
-                                One here
+                        <span class="u__caps u__bold u__pb1">Latest Jobs</span>
+                        <ul class="jobs">
+                            <li class="jobs__posting">
+                                <div class="jobs__content">
+                                    <p class="job__employer">Impraise (YC S14)</p>
+                                    <p class="job__position">
+                                        Sr. Backend Developer
+                                    </p>
+                                </div>
                             </li>
-                            <li>
-                                Another one
+                            <li class="jobs__posting">
+                                <div class="jobs__content">
+                                    <p class="job__employer">Casetext (YC S13)</p>
+                                    <p class="job__position">
+                                        Product Manager
+                                    </p>
+                                </div>
                             </li>
                         </ul>
                     </section>
