--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="./public/style.css" />
 
         <!-- JS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <script src="./assets/js/main.js"></script>
     </head>
     <body>
         <header class="header">
@@ -84,6 +86,67 @@
                                     <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
                                     <br/>
                                     <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://designernews.co" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">45 comments</span> &#9679; <span class="li__subcontents contents__time">17 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by matthamlin</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://designernews.co" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">45 comments</span> &#9679; <span class="li__subcontents contents__time">17 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by matthamlin</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li">
+                                <div class="li__contents">
+                                    <a href="http://news.ycombinator.com" class="li__link--nolink u__bold">Testing another</a>
+                                    <br/>
+                                    <span class="li__subcontents contents__comments">12 comments</span> &#9679; <span class="li__subcontents contents__time">3 hours ago</span>  &#9679; <span class="li__subcontents contents__user">by sama</span>
+                                </div>
+                            </li>
+                            <li class="article__li article__li--end">
+                                <div class="li__contents">
+                                    <button class="load-more-btn">Load More</button>
                                 </div>
                             </li>
                         </ul>
