Adding pipes between footer links

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </main>
         <footer class="footer">
             <section class="footer__links">
-                <span class="footer__linksWrapper u__bold"><a class="footer__link" href="#!">Guidelines</a> <a class="footer__link" href="#!">FAQ</a> <a class="footer__link" href="#!">API</a> <a class="footer__link" href="#!">Security</a> <a class="footer__link" href="#!">Lists</a> <a class="footer__link" href="#!">Bookmarklet</a>  <a class="footer__link" href="#!">DMCA</a>  <a class="footer__link" href="#!">FAQ</a> <a class="footer__link" href="#!">Apply to YC</a> <a class="footer__link" href="#!">Contact</a> </span>
+                <span class="footer__linksWrapper u__bold"><a class="footer__link" href="#!">Guidelines</a> | <a class="footer__link" href="#!">FAQ</a> | <a class="footer__link" href="#!">API</a> | <a class="footer__link" href="#!">Security</a> | <a class="footer__link" href="#!">Lists</a> | <a class="footer__link" href="#!">Bookmarklet</a> | <a class="footer__link" href="#!">DMCA</a> |  <a class="footer__link" href="#!">FAQ</a> | <a class="footer__link" href="#!">Apply to YC</a> | <a class="footer__link" href="#!">Contact</a> </span>
             </section>
             <section class="footer__logo">
                 <span class="logo--footer u__bold">Y</span>
